# bashparser

./: .gitignore  README.md  README.txt  setup.cfg  setup.py
.github/workflows/: release_to_pypi.yml
bashparse/: __init__.py  ast.py  chunk.py  commands.py  functions.py  generalize.py  main.py  path_variable.py  plotting.py  regex.py  template.py  unroll.py  variables.py
bashparse/test/: test_ast.py  test_command.py  test_features.py  test_unroll.py  test_variable.py
bashparser/: __init__.py  ast.py  chunk.py  commands.py  complexity.py  functions.py  generalize.py  metric.py  template.py  unroll.py  variables.py
bashparser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bashparser/test/: test_ast.py  test_chunk.py  test_command.py  test_features.py  test_functions.py  test_unroll.py  test_variable.py
