[metadata]
name = bashparser
version = 0.17
author = Spencer Stingley
description = A framework for manipulating and analysing bash scripts
long_description = A framework for manipulating and analysing bash scripts
url = https://github.com/BlankCanvasStudio/bashparse
keywords = bash, parsing, analysis
python_requires = >=3.6
classifiers =
        Programming Language :: Python :: 3
        Operating System :: OS Independent
install_requires = 
    bashlex
test = 
    nose2
[options.entry_points]
console_scripts =
    unroll = bashparser.unroll:main
